force-app/main/default/objects/csfb__CongaInvoicingSettings__c/csfb__CongaInvoicingSettings__c.object-meta.xml
<CustomObject>
    <customSettingsType>Hierarchy</customSettingsType>
    <description>Configure Conga Invoicing</description>
    <label>Conga Invoicing Settings</label>
</CustomObject>