force-app/main/default/objects/csfb__CongaInvoicingSettings__c/fields/csfb__BaseCNVFPage__c.field-meta.xml
<CustomField>
    <fullName>csfb__BaseCNVFPage__c</fullName>
    <defaultValue>&quot;csfb__Conga_Conductor_SFB&quot;</defaultValue>
    <label>Base CN VF Page</label>
    <length>80</length>
    <type>Text</type>
</CustomField>