force-app/main/default/objects/csfb__CongaInvoicingSettings__c/fields/csfb__BaseVFPage__c.field-meta.xml
<CustomField>
    <fullName>csfb__BaseVFPage__c</fullName>
    <defaultValue>&quot;csfb__Conga_Composer&quot;</defaultValue>
    <label>Base VF Page</label>
    <length>80</length>
    <type>Text</type>
</CustomField>