force-app/main/default/objects/csfb__CongaInvoicingSettings__c/fields/csfb__Name_Space__c.field-meta.xml
<CustomField>
    <fullName>csfb__Name_Space__c</fullName>
    <defaultValue>&quot;sfb&quot;</defaultValue>
    <label>Name Space</label>
    <length>25</length>
    <type>Text</type>
</CustomField>