force-app/main/default/objects/csfb__CongaInvoicingSettings__c/fields/csfb__Set_by_UserName__c.field-meta.xml
<CustomField>
    <fullName>csfb__Set_by_UserName__c</fullName>
    <label>Set by UserName</label>
    <length>255</length>
    <type>Text</type>
</CustomField>